<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/cardGambar"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/imagePenawaran"
            android:src="@drawable/ic_launcher_background"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_penawaran"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/cardGambar"
        android:text="@string/penawaran_produk" />

    <TextView
        android:id="@+id/tv_tanggalPenawaran"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:text="20 Apr, 14:04" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="1"
        android:layout_toEndOf="@id/cardGambar"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_penawaran"
        android:text="@string/jam_tangan_casio"
        android:id="@+id/tv_namaPenawaran"
        style="@style/Heading4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="1"
        android:layout_toEndOf="@id/cardGambar"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_namaPenawaran"
        android:text="@string/rp_0_00"
        android:id="@+id/tv_hargaPenawaran"
        style="@style/Heading4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="1"
        android:layout_toEndOf="@id/cardGambar"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_hargaPenawaran"
        android:text="@string/ditawar_rp_150_000"
        android:id="@+id/tv_ditawarPenawaran"
        style="@style/Heading4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/second_hand_neutral5"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_ditawarPenawaran"/>



</RelativeLayout>