<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/card_itemPenawaranBuyer"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/cardGambar"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/imagePenawaran2"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_penawaran2"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/cardGambar"
        android:text="@string/penawaran_produk"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_tanggalPenawaran2"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:text="20 Apr, 14:04"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="1"
        android:layout_toEndOf="@id/cardGambar"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_penawaran2"
        android:text="@string/jam_tangan_casio"
        android:id="@+id/tv_namaPenawaran2"
        style="@style/Heading4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="1"
        android:layout_toEndOf="@id/cardGambar"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_namaPenawaran2"
        android:text="@string/rp_0_00"
        android:id="@+id/tv_hargaPenawaran2"
        style="@style/Heading4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="1"
        android:layout_toEndOf="@id/cardGambar"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_hargaPenawaran2"
        android:text="@string/ditawar_rp_150_000"
        android:id="@+id/tv_ditawarPenawaran2"
        style="@style/Heading4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ditawarPenawaran2"
        android:visibility="visible"
        android:id="@+id/linearLayoutButton"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/btnTolak"
            android:layout_height="wrap_content"
            android:text="Tolak"
            style="@style/ButtonOutlined"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Terima"
            android:id="@+id/btnTerima"
            style="@style/Button"
            tools:ignore="HardcodedText" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/second_hand_neutral5"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linearLayoutButton"/>



</RelativeLayout>